--- a/client/src/assets/styles/_global.scss
+++ b/client/src/assets/styles/_global.scss
@@ -473,6 +473,19 @@ html body {
     max-width: none;
   }
 
+  button {
+    text-decoration: none;
+    border-bottom: 2px solid;
+    border-color: theme-color("dark");
+
+    &:hover,
+    &:active,
+    &:focus {
+      color: theme-color("primary-yellow");
+      border-color: theme-color("primary-yellow");
+    }
+  }
+
   @include media-breakpoint-down(xs) {
     padding: 40px 37.5px;
   }
